objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Collection_Activity_Balance__c</fullName>
        <label>Collection Activity Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collection_Activity_Code__c</fullName>
        <label>Collection Activity Code</label>
        <picklist>
            <picklistValues>
                <fullName>Collection Activity Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CURE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Collection_Activity_DateTime__c</fullName>
        <label>Collection Activity DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Collection_Activity_Promise_Amount_1__c</fullName>
        <label>Collection Activity Promise Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collection_Activity_Promise_Amount_2__c</fullName>
        <label>Collection Activity Promise Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collection_Activity_Promise_Date_1__c</fullName>
        <label>Collection Activity Promise Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collection_Activity_Promise_Date_2__c</fullName>
        <label>Collection Activity Promise Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collection_Activity_Review_Date__c</fullName>
        <label>Collection Activity Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collection_Recommended_Pass_Strategy__c</fullName>
        <label>Collection Recommended Pass Strategy</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_UserID__c</fullName>
        <label>Collection UserID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Mileage__c</fullName>
        <label>Current Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <label>Dealer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Number__c</fullName>
        <label>Financial Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <label>Financial Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_First_Name__c</fullName>
        <description>Of borrower requesting the service</description>
        <label>SR First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Last_Name_Business_Name__c</fullName>
        <description>Of borrower requesting the service</description>
        <label>SR Last Name Business Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Recipient__c</fullName>
        <label>Service Recipient</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Request_Category__c</fullName>
        <label>Service Request Category</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Request_Type__c</fullName>
        <label>Service Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Address Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privacy Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment inquiries</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Request_User_Group__c</fullName>
        <label>Service Request User Group</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Result__c</fullName>
        <label>Service Result</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Correspondence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Incoming</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Created_By__c</fullName>
        <defaultValue>$User.Lan_Id__c</defaultValue>
        <label>Source Created By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Created_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Source Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source_System_Created_By__c</fullName>
        <defaultValue>&quot;SFDC&quot;</defaultValue>
        <label>Source System Created By</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StarsSRNumber__c</fullName>
        <label>StarsSRNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferReason__c</fullName>
        <description>Additional SR Fields in STARS not available in the mandatory SF fields list</description>
        <label>TransferReason</label>
        <picklist>
            <picklistValues>
                <fullName>Excessive wear, use, mileage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misroute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Surrender</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>